2010-06-02  Roland Grunberg  <rgrunber@redhat.com>

	* plugin.properties: Externalize some strings in the Manifest.
	* build.properties: See above
	* META-INF/MANIFEST.MF: See above
	* plugin.xml: See above

2010-06-01  Roland Grunberg  <rgrunber@redhat.com>

	* errors.prop: Modify error message for uprobes to list both
	/usr/share/ and /usr/local/share in the make step for standard
	SystemTap installs, and local installations.

2010-04-13  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/callgraph/core/SystemTapTextParser.java:
	* src/org/eclipse/linuxtools/callgraph/core/SystemTapErrorHandler.java:
		Clean up code. 

2010-04-08  Roland Grunberg  <rgrunber@redhat.com>

	* META-INF/MANIFEST.MF: Add required import packages.
	* src/org/eclipse/linuxtools/callgraph/core/FileFinderOpener.java
		(findAndOpen): Simplify logic by using functions in profiling
		framework o.e.l.profiling to link to source code.

2010-03-22  Roland Grunberg  <rgrunber@redhat.com>

	* META-INF/MANIFEST.MF: Add o.e.l.profiling.ui to imported packages.
	* src/org/eclipse/linuxtools/callgraph/core/FileFinderOpener.java:
		Clean up code by using openEditorAndSelect which is now in profiling framework.
	* src/org/eclipse/linuxtools/callgraph/core/messages.properties: Remove these strings.

2010-02-26  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/callgraph/core/SystemTapParser.java:
		Clean up code and add getter for internal data field.

2010-02-23  Charley Wang  <chwang@redhat.com>

	* src/org/eclipse/linuxtools/callgraph/core/SystemTapParser.java: Add a Thread.sleep() to stop abusing CPU cycles so much
	Get rid of extraneous parsing job as a further optimization

2010-02-12  Charley Wang  <chwang@redhat.com>

	* src/org/eclipse/linuxtools/callgraph/core/SystemTapView.java: Create default implementations of getParser and setParser using a private SystemTapParser variable.